fixed text wrap on profiles

--- a/react-app/src/components/User.css
+++ b/react-app/src/components/User.css
@@ -109,9 +109,10 @@
     margin-top: 3%;
     color: rgba(255, 255, 255, 0.75);
     max-width: 200px;
-    max-height: 20px;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    max-height: 30px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     text-decoration: none;
     display: block;
 }
